--- a/server/package.json
+++ b/server/package.json
@@ -5,13 +5,17 @@
   "scripts": {
     "start": "node server.js",
     "dev": "node --watch server.js",
-    "init-db": "node init-db.js"
+    "init-db": "node init-db.js",
+    "import-mysql": "node import-mysql.js",
+    "create-tables": "node create-missing-tables.js",
+    "test-connection": "node test-connection.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^4.18.2",
+    "mysql2": "^3.16.1",
     "sqlite3": "^5.1.6",
     "uuid": "^9.0.1"
   }
 }
-
