--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "test-connection": "node test-connection.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
